objects/USA_Zip_Code__c.object
<CustomObject>
    <description>USA BRIEFCASE object</description>
    <fields>
        <fullName>USA_City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Latitude__c</fullName>
        <label>Latitude</label>
        <precision>9</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_Longitude__c</fullName>
        <label>Longitude</label>
        <precision>9</precision>
        <required>true</required>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>USA_State__c</fullName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>USA_Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>USA Zip Code</label>
    <nameField>
        <displayFormat>ZC-{000000}</displayFormat>
        <label>Zip Code Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USA Zip Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>